Calendar fix and gallery position fix on mobile

--- a/src/assets/styles/sass_modules/_imgbox.scss
+++ b/src/assets/styles/sass_modules/_imgbox.scss
@@ -51,3 +51,10 @@
     padding-bottom: 16%;
   }
 }
+
+.gallery-row {
+  margin-left: -20px !important;
+  @include respond-to(handhelds) {
+    margin-left: -5px !important;
+  }
+}
